# Stellarust_old

./: .gitignore  Cargo.toml  README.md  Stellarust.code-workspace  curl_test.sh  file_test.sh  workspace.code-workspace
backend/: Cargo.toml
backend/src/: api.rs  broadcaster.rs  data.rs  file.rs  file_reader.rs  lib.rs  linux_directory_watcher.rs  macos_directory_watcher.rs  main.rs  server.rs  windows_directory_watcher.rs
backend/src/broadcasterr/: mod.rs  test.rs
backend/src/server/: mod.rs  test.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  LICENSE_MIT  README.md
frontend/src/: api_request.rs  app.rs  event_source.rs  event_source_service.rs  fetch_service.rs  graph.rs  header.rs  lib.rs  ws_service.rs
frontend/static/: .gitignore  index.html  package.json  style.css
