[package]
name = "stellarust"
version = "0.1.0"
authors = ["Michael McCulloch <michael.james.mcculloch@fastmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"

[workspace]
members = [
    "frontend",
    "backend"
]

[profile.release.package.frontend]
opt-level = "s"

[profile.release.package.backend]
opt-level = 3
