[package]
name = "stellarust_backend"
version = "0.1.0"
authors = ["Michael McCulloch <michael.james.mcculloch@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
actix-cors = "0.5.4"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "1.0.1"
serde =   "1"
serde_derive = "1"
serde_json = "1.0"
json = "0.12"
listenfd = "0.3.3"
notify = "4.0.16"